--- a/HTML/assets/less/quiz.less
+++ b/HTML/assets/less/quiz.less
@@ -6,16 +6,23 @@
 	}
 }
 
-.cbp_tmtimeline{
-	li.setGroup{
-		margin-bottom: 20px;
-		//padding: 5px 20px 5px 5px;
-		.cbp_tmlabel{
-			margin-bottom: 2px;
-			padding: 10px;
-			&:not(:first-child):after{
-				//display: none;
-			}
+.checkbox.check-info.radioCheck input[type=checkbox]:checked + label{
+	&:before{
+		
+	}
+	&:after{
+		
+	}
+}
+
+.setGroup{
+	margin-bottom: 20px;
+	//padding: 5px 20px 5px 5px;
+	.cbp_tmlabel{
+		margin-bottom: 2px;
+		padding: 10px;
+		&:not(:first-child):after{
+			//display: none;
 		}
 	}
 }
@@ -33,6 +40,10 @@
 	}
 }
 
+#content-board.quizContent{
+	margin: auto;
+}
+
 .quizTimer {
 	//max-width: 190px;
 	margin: 0 auto 0;
@@ -40,21 +51,29 @@
 
 .quizActions{
 	max-width: 760px;
-}
-
-.timerBox{
-	float: right;
+	box-shadow: #dadada 0px 3px 0 0px inset;
 }
 
 .timerBox, .quizProgress{
 	width: 235px;
 	// background: @color-white;
-	background: darken(@preview-grey, 15%);
+	// background: darken(@preview-grey, 15%);
 	margin: 0 1.5%;
+	padding: 0 5px;
+}
+
+.timerBox{
+	float: right;
+	padding: 0;
+}
+
+.timerStrip, .progressStrip, .detailsStrip{
+	display: none;
 }
 
 .quizProgress{
 	float: left;
+	.container-grey;
 }
 
 .quizSteps{
@@ -65,6 +84,7 @@
 		li{
 			text-align: center;
 			padding: 0;
+			cursor: pointer;
 			a{
 				padding: 30px 0;
 				width: 33.3%;
@@ -113,13 +133,28 @@
 			}
 			&.skip{
 				a{
+					background: @color-warning;
+					color: @color-white;
+					&:hover{
+						background: darken(@color-warning, 10%);
+					}
+					&:before{
+						content: "\f051";
+						bottom: 6px;
+						right: 8px;
+						font-size: 18px;
+					}
+				}
+			}
+			&.partiallyCorrect{
+				a{
 					background: @color-info;
 					color: @color-white;
 					&:hover{
 						background: darken(@color-info, 10%);
 					}
 					&:before{
-						content: "\f021";
+						content: "\f046";
 						bottom: 6px;
 						right: 8px;
 						font-size: 18px;
@@ -135,6 +170,43 @@
 						content: "\f0d8";
 						bottom: 4px;
 						left: 40%;
+					}
+				}
+
+				&.right{
+					a{
+						box-shadow: inset 0 0 0 10px darken(@color-success, 10%);
+						&:before{
+							color: darken(@color-success, 10%);
+							left: 10%;
+						}
+					}
+				}
+				&.wrong{
+					a{
+						box-shadow: inset 0 0 0 10px darken(@color-danger, 10%);
+						&:before{
+							color: darken(@color-danger, 10%);
+							left: 10%;
+						}
+					}
+				}
+				&.skip{
+					a{
+						box-shadow: inset 0 0 0 10px darken(@color-warning, 10%);
+						&:before{
+							color: darken(@color-warning, 10%);
+							left: 10%;
+						}
+					}
+				}
+				&.partiallyCorrect{
+					a{
+						box-shadow: inset 0 0 0 10px darken(@color-info, 10%);
+						&:before{
+							color: darken(@color-info, 10%);
+							left: 10%;
+						}
 					}
 				}
 			} 
@@ -183,55 +255,111 @@
 	}
 }
 
-@media (min-width: 1020px) and (max-width:1295px){
+@media  (max-width:1200px){
+
+	#content-board.quizContent{
+		margin-top: 60px;
+	}
+
+	.timerStrip, .progressStrip, .detailsStrip{
+		display: block;
+		position: fixed;
+		top: 150px;
+		right: 0px;
+		height: 60px;
+		width: 50px;
+		font-size: 28px;
+		text-align: center;
+		padding-top: 8px;
+		color: @color-white;
+		background: @color-success;
+		-webkit-transition-duration: 0.3s;
+		  -moz-transition-duration: 0.3s;
+		  -o-transition-duration: 0.3s;
+		  transition-duration: 0.3s;
+	}
+	.progressStrip{
+		right: auto;
+		left: 0px;
+		background: @color-info;
+	}
+	.detailsStrip{
+		width: 150px;
+		height: 40px;
+		top: 0;
+		left: 43%;
+		right: auto;
+		background-color: @color-primary;
+		font-size: 16px;
+	}
+
+	.quizHeader{
+		position: fixed;
+		top: -112px;
+		margin-bottom: 0;
+		width: 100%;
+		z-index: 5;
+		-webkit-transition-duration: 0.3s;
+		  -moz-transition-duration: 0.3s;
+		  -o-transition-duration: 0.3s;
+		  transition-duration: 0.3s;
+		  &:hover{
+		  	top: 0;
+		  	.detailsStrip{
+		  		top: 112px;
+		  	}
+		  }
+	}
+
 	.timerBox, .quizProgress{
 		margin: 0;
-		// float: right;
-		left: 0;
-		position: absolute;
+		float: none;
+		position: fixed;
+		top: 150px;
+		left: -235px;
+		z-index: 9999;
+		-webkit-transition-duration: 0.3s;
+		  -moz-transition-duration: 0.3s;
+		  -o-transition-duration: 0.3s;
+		  transition-duration: 0.3s;
 	}
-	.timerBox{
-		top: 420px;
-	}
-	// .quizContent{
-	// 	#myCanvas{
-	// 		margin: 0;
-	// 	}
-	// }
-	.quizActions{
-		margin: 0;
-		margin-left: auto;
-	}
-	.sidebarContainer{
-		position: relative;
-	}
-	// .qstnInfo{
-	// 	margin-top: 100px;
-	// }
-}
-
-@media (max-width:1019px){
-	.sidebarContainer{
-		position: absolute;
-		bottom: 0;
-		z-index: 999;
-		width: 100%;
-		.timerBox{
-			float: left;
-			width: 35%;
-			margin: 0;
+	.quizProgress{
+		&:hover{
+			left: 0;
+			.progressStrip{
+				left: 235px;
+			}
 		}
 
-		.quizProgress {
-			float: left;
-			width: 65%;
-			margin: 0;
-
-			.quizSteps ul li a{
-				width: 15%;
+	}
+	.timerBox{
+		// margin-bottom: 8px;
+		right: -235px;
+		left: auto;
+		&:hover{
+			right: 0;
+			.timerStrip{
+				right: 235px;
 			}
 		}
 	}
+
+	.quizActions{
+		// margin: 0;
+		// margin-bottom: 10px;
+		// margin-left: auto;
+	}
+	.sidebarContainer{
+		position: relative;
+		float: left;
+	}
+
+}
+
+
+
+.quizSummRespnse{
+	line-height: 20px;
 }
 
 
