--- a/wp-content/themes/walnut/walnut/dev/css/responsive.css
+++ b/wp-content/themes/walnut/walnut/dev/css/responsive.css
@@ -429,38 +429,38 @@ and (min-width : 1824px) {
        only screen and (-o-min-device-pixel-ratio: 200/100),
        only screen and (min-device-pixel-ratio: 2.0) {
 		.grid.simple .grid-title .tools a{
-  			background: url('../../../images/icon/portlet-tray-2x.png');
+  			background: url('../images/icon/portlet-tray-2x.png');
 			background-size: 199px 57px;
 		} 	
 		.tiles .controller a{
 			position:relative;
-			background: url('../../../images/icon/portlet-tray-2x.png');
+			background: url('../images/icon/portlet-tray-2x.png');
 			background-size: 199px 57px;
 		}
 		.widget-item .controller a{
 			position:relative;
-			background: url('../../../images/icon/portlet-tray-2x.png');
+			background: url('../images/icon/portlet-tray-2x.png');
 			background-size: 199px 57px;
 		}
 	
 		.iconset{
-		background: url('../../../images/icon/top-trayx2.png'); 
+		background: url('../images/icon/top-trayx2.png'); 
 		background-size: 394px 29px;
 		}
 		
 		.status-icon{
-		background: url('../../../images/icon/status2x.png'); 
+		background: url('../images/icon/status2x.png'); 
 		background-size: 79px 16px;
 		
 		}
 		
 		.scrollup{
-			background: url('../../../images/pullup2x.png'); 
+			background: url('../images/pullup2x.png'); 
 			background-size: 57px 27px;
 		}
 		
 		.alert .close{
-			background: url("../../../images/icon/noti-cross-2x.png") no-repeat scroll 0 0 transparent;
+			background: url("../images/icon/noti-cross-2x.png") no-repeat scroll 0 0 transparent;
 			background-position: -9px -10px;
 			width: 10px; height: 9px;
 			position: relative;
