--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/single-question/templates/question-area-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/single-question/templates/question-area-tpl.html
@@ -1,9 +1,9 @@
-<div class="container-grey m-b-5  qstnInfo">
+<!--<div class="container-grey m-b-5  qstnInfo">
     <label class="form-label bold small-text muted no-margin inline">Question Info: </label>
-    <p class="bold inline text-grey">{{&instructions}}</p>
-</div>
+    <p class="inline text-grey small">{{&instructions}}</p>
+</div>-->
 
-<div id="content-board" class="quizContent no-margin"></div>
+<div id="content-board" class="quizContent"></div>
 
 <div class="container-grey m-b-10 p-l-10 p-r-10 p-t-10 p-b-10 h-center quizActions"> 
     <span class="pull-left small" id="first_question"></span>
@@ -40,8 +40,8 @@
 </div>
 
 {{#showComment}}
-    <div class="container-grey m-b-5 qstnInfo">
+    <div class="container-grey m-b-5 quizComment">
         <label class="form-label bold small-text muted no-margin inline">Comment: </label>
-        <p class="bold inline text-grey">{{&comment}}</p>
+        <p class="inline text-grey small">{{&comment}}</p>
     </div>
 {{/showComment}}
