New Css Changes done for quiz screen fib and mcq updated

--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -166,7 +166,8 @@
   overflow-x: auto;
 }
 #content-board #myCanvas,
-#content-board.quizContent #myCanvas {
+#content-board.quizContent #myCanvas,
+#content-builder #myCanvas {
   background: #ffffff;
   max-width: 760px;
   margin: 0 auto;
@@ -175,7 +176,8 @@
   font-weight: normal;
 }
 #content-board #myCanvas li.ui-sortable-placeholder,
-#content-board.quizContent #myCanvas li.ui-sortable-placeholder {
+#content-board.quizContent #myCanvas li.ui-sortable-placeholder,
+#content-builder #myCanvas li.ui-sortable-placeholder {
   list-style: none;
   padding: 20px 0;
   background: #d0d0d0;
@@ -973,6 +975,11 @@ textarea.border {
   -o-border-image: url(../../../images/border.gif) 20 20 stretch;
   /* Opera */
   border-image: url(../../../images/border.gif) 20 20 stretch;
+}
+.table-bordered th {
+  background-color: #8b91a0;
+  border: 1px solid #8b91a0;
+  color: #ffffff;
 }
 input[type="text"].rowColInput {
   width: 30%;
@@ -2430,7 +2437,7 @@ ul.classes .classesWrap {
   padding-bottom: 4px;
 }
 #textbooks.list.myClass .meta {
-  width: 15.5%;
+  width: 13.5%;
 }
 #textbooks.list.myClass .meta.name {
   width: 25%;
@@ -2442,7 +2449,7 @@ ul.classes .classesWrap {
   width: 65%;
 }
 #textbooks.list.myClass .meta.rec {
-  width: 22%;
+  width: 24%;
 }
 #textbooks.list.myClass .txtbook {
   cursor: pointer;
@@ -2676,8 +2683,11 @@ textarea.error,
 #take-class-modules.takeClass th.duration {
   width: 10%;
 }
+#take-class-modules.takeClass th.statusColmn {
+  width: 13%;
+}
 #take-class-modules.takeClass th:last-child {
-  width: 30%;
+  width: 29%;
 }
 .table-fixed-layout td.cpHeight {
   white-space: normal;
