SIngle Fib issue solved.

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-description/templates/quiz-description-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-description/templates/quiz-description-tpl.html
@@ -1,7 +1,7 @@
 {{#practice_mode}}
     <div class="well text-center">
-        <h4><span class="bold">This is a practice quiz.
-            It is designed to help you train for the class tests.</span></h4>
+        <!-- <h4><span class="bold">This is a practice quiz.
+            It is designed to help you train for the class tests.</span></h4> -->
     </div>
 {{/practice_mode}}
 
