--- a/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync.html
@@ -6,7 +6,14 @@
 
                       <div class="col-sm-12 b-b b-grey p-b-10 m-b-5">
                         <!-- <h3 id="userName"class="semi-bold text-center"></h3> -->
+                        <label class="text-center">Select your storage location</label>
+                          <div class="h-center">
+                          <select id="storageOption">
+
+                          </select>
+                          </div>
                         <h3 class="semi-bold text-center">Data Sync</h3>
+
 
                         <div id="totalRecords" class="row">
                           <div class="col-sm-12  m-b-10">
@@ -26,8 +33,8 @@
 
                         <div class="row">
                           <div class="col-sm-12  m-b-10 m-t-10">
-                            <div class="">
-                              <button id="syncStartContinue" type="button" class="btn btn-success h-align-middle block"><span id="syncButtonText" class="bold">Start</span></button>
+                            <div class="text-center">
+                              <button id="syncStartContinue" type="button" class="btn btn-success btn-lg m-r-10"><span id="syncButtonText" class="bold">Start</span></button>
                               
                               <h5 id="syncSuccess" class="m-t-5 semi-bold text-center text-success" style="display:none">Success</h5>
                               
@@ -36,6 +43,7 @@
                             </div>
                           </div>
                         </div>
+
 
                         </div>
 
@@ -48,8 +56,8 @@
 
                         <div class="row">
                           <div class="col-sm-12  m-b-10 m-t-10">
-                            <div class="">
-                              <button id="syncMediaStart" type="button" class="btn btn-success h-align-middle block"><span id="syncMediaButtonText" class="bold">Start</span></button>
+                            <div class="text-center">
+                              <button id="syncMediaStart" type="button" class="btn btn-success btn-lg m-r-10"><span id="syncMediaButtonText" class="bold">Start</span></button>
                               
                               <h5 id="syncMediaSuccess" class="m-t-5 semi-bold text-center text-success" style="display:none">Success</h5>
                               
