content creator: added youtube support

--- a/wp-content/themes/walnut/walnut/dev/js/apps/media-manager/templates/outer.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/media-manager/templates/outer.html
@@ -2,6 +2,7 @@
 <ul class="nav nav-tabs">
   <li class="active all-media-tab"><a href="#all-media-region" data-toggle="tab">Gallery</a></li>
   <li class="upload-tab"><a href="#upload-region" data-toggle="tab">Upload</a></li>
+  <li class="youtube-video"><a href="#youtube-region" data-toggle="tab">Youtube Video</a></li>
 
   <!--li: a(href="#gallery-region" data-toggle="tab") Gallery-->
 </ul>
@@ -17,6 +18,7 @@
   </div>
   <div id="upload-region" class="tab-pane "></div>
   <div id="gallery-region" class="tab-pane"></div>
+  <div id="youtube-region" class="tab-pane"></div>
 </div>
 <div class="clearfix">
   <button class="btn btn-primary media-manager-select">Select</button>
