video js responsive height fixed

--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -803,7 +803,9 @@
 .video-js {
   background-color: #f8f8f8;
   border-bottom: 1px solid #e5e9ec;
+  padding-top: 56.25%;
 }
+.vjs-fullscreen {padding-top: 0px}
 .playlistToggle {
   position: relative;
   top: -45px;
