--- a/wp-content/themes/walnut/walnut/dev/js/apps/edit-module/content-display/templates/content-display.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/edit-module/content-display/templates/content-display.html
@@ -61,3 +61,25 @@
     </div>
 </div>
 {{/isSet}}
+{{#isStudentTrainingQuiz}}
+<div class="contentPiece" data-id="{{id}}">
+    <time class="cbp_tmtime" datetime="">
+        <span class="time">{{duration}} <span class="semi-bold">mins</span></span>
+    </time>
+    <div class="cbp_tmicon info animated bounceIn"> <i class="fa fa-question"></i> </div>
+    <div class="cbp_tmlabel">
+        <div class="p-t-15 p-l-30 p-r-15 p-b-20 xs-p-r-10 xs-p-l-10 xs-p-t-5">
+            <div class="tools"> <a href="#content-piece-config" data-toggle="modal" class="config"></a> <a href="javascript:;" class="remove"></a> </div>
+            <h4 class="m-t-5 m-b-5"><span class="text-success semi-bold">{{name}}</span> </h4>
+        </div>
+        <div class="clearfix"></div>
+        <div class="tiles grey p-t-10 p-b-10 p-l-20">           
+            <div class="muted">
+                    Marks: {{marks}},
+                    Duration: {{duration}} mins
+            </div> 
+            <div class="clearfix"></div>
+        </div>
+    </div>
+</div>
+{{/isStudentTrainingQuiz}}
