--- a/wp-content/themes/walnut/walnut/dev/js/apps/take-module-item/item-description/templates/top-panel.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/take-module-item/item-description/templates/top-panel.html
@@ -15,6 +15,12 @@
 </div>
 
 <div class="contentInfo">
+    <div class="modTime next">
+        <button type="button" id="top-panel-question-done"  class="btn btn-block btn-success m-t-10">
+            <i class="fa fa-forward"></i> Next
+        </button>
+    </div>
+
     <div class="grid-body no-border">
         <div class="b-grey b-b m-b-10 p-b-5" id="question-type-col">
             <label class="form-label bold small-text muted no-margin">Type</lab el>
