column padding changes

--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -59,6 +59,15 @@
 			background: lighten(@dash-grey, 15%);
 			border: none;
 		}
+		.column {
+			padding: 0 5px;
+			&:first-child{
+				padding-left:15px;
+			}
+			&:last-child{
+				padding-right: 15px;
+			}
+		}
 	}
 }
 
