--- a/wp-content/themes/walnut/walnut/dev/js/apps/take-module-item/item-description/templates/top-panel.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/take-module-item/item-description/templates/top-panel.html
@@ -15,7 +15,7 @@
 </div>
 
 <div class="contentInfo">
-    <div class="modTime next">
+    <div class="modTime next m-b-10">
         <button type="button" id="top-panel-question-done"  class="btn btn-block btn-success m-t-10">
             <i class="fa fa-forward"></i> Next
         </button>
@@ -23,7 +23,7 @@
 
     <div class="grid-body no-border">
         <div class="b-grey b-b m-b-10 p-b-5" id="question-type-col">
-            <label class="form-label bold small-text muted no-margin">Type</lab el>
+            <label class="form-label bold small-text muted no-margin">Type</label>
             <span style="text-transform: capitalize">{{question_type}}</span>
         </div>
         <div class="b-grey b-b m-b-10 p-b-5">
