--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -629,7 +629,10 @@
 .image{
 	img{
 		// z-index: 99;
-		height: inherit;
+		/*height: 100%;*/
+		max-height: 100%;
+		width: auto;
+		margin: auto;
 	}
 	.ui-resizable-handle.ui-resizable-s{
 		height: 15px;
