--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -773,7 +773,10 @@
   display: block;
 }
 .image img {
-  height: inherit;
+  /*height: 100%;*/
+  max-height: 100%;
+  width: auto;
+  margin: auto;
 }
 .image .ui-resizable-handle.ui-resizable-s {
   height: 15px;
