--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
@@ -158,6 +158,9 @@
 <div class="builder_actions pull-right">
     <button type="button" class="btn btn-info btn-cons2" id="save-question">
         <i class="fa fa-check"></i> Save</button>
+        
+    <button type="button" class="btn btn-info btn-cons2" id="clone-question">Clone</button>
+        
     <button type="button" id="preview-question" class="btn btn-info btn-cons2 none">
         <i class="fa fa-eye"></i> Preview</button>
 </div>
