Previous button book flip animation done added book flip for quiz & teacher training

--- a/wp-content/themes/walnut/walnut/dev/js/apps/student-training-module/take-module/item-description/templates/top-panel.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/student-training-module/take-module/item-description/templates/top-panel.html
@@ -1,6 +1,6 @@
 <div class="contentTime">
     <button type="button" id="top-panel-previous"  class="btn btn-block btn-success m-t-10">
-        <i class="fa fa-forward"></i> Previous
+        <i class="fa fa-backward"></i> Previous
     </button>
 </div>
 
