Content Pieces List: Modified Time & Content Type added

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-pieces/list-content-pieces/templates/content-pieces-list-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-pieces/list-content-pieces/templates/content-pieces-list-tpl.html
@@ -8,6 +8,7 @@
             <th>Present in module</th>
             <th>Textbook</th>
             <th>Chapter</th>
+            <th>Type</th>
             <th>Last Modified</th>
             <th>Status</th>
             <th>Actions</th>
