Start button for starting student training

--- a/wp-content/themes/walnut/walnut/dev/js/apps/student-training-module/view-module/module-description/templates/module-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/student-training-module/view-module/module-description/templates/module-description.html
@@ -50,7 +50,6 @@
         </div>
     </div>
 
-    {{#takeClassModule}}
     <div class="tiles grey text-grey p-t-10 p-l-15 p-r-10 p-b-10 b-grey b-b">
         <div class="modTimes no-margin">
             <div class="text-center b-r b-grey">
@@ -60,41 +59,8 @@
                 </h3>
             </div>
 
-            <div class="text-center b-r b-grey">
-                <div class="{{^isTraining}}modProgress{{/isTraining}}" >
-                    <p class="bold small-text muted m-t-10 m-b-5">Progress</p>
-                    {{^isTraining}}
-                    <div class="progress progress-large">
-                        <div data-percentage="{{getProgressPercentage}}%" style="width:{{getProgressPercentage}}%;"
-                             class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="{{getProgressPercentage}}" aria-valuemin="0"
-                             aria-valuemax="100">{{getProgressData}}
-                        </div>
-                    </div>
-                    {{/isTraining}}
-                    {{#isTraining}}
-                    <p class="small-text muted"> This will display the progress of training module in class mode.</p>
-                    {{/isTraining}}
-
-                </div>
-            </div>
-            
-            <div class="text-center b-r b-grey">
-                <p class="bold small-text muted no-margin"> Elapsed Module Time</p>
-                {{^isTraining}}
-                <h3 class="bold text-grey no-margin">
-                    <span class="animate-number" data-animation-duration="1200">
-                        {{showElapsedTime}}
-                    </span>
-                </h3>
-                {{/isTraining}}
-                {{#isTraining}}
-                <p class="small-text muted">This will display what is the elapsed module
-                    time of the training module in class mode.</p>
-                {{/isTraining}}
-            </div>
-
-            <div class="">
-                {{&startScheduleButton}}
+            <div class="pull-right">
+                <button type="button" id="start-module" class="btn btn-success action btn-block m-t-10">Start</button>
             </div>
         </div>
         <div class="row no-margin p-t-10">
@@ -110,5 +76,4 @@
             </div>
         </div>
     </div>
-    {{/takeClassModule}}
 </div>
