removed date completed from sudent training module items

--- a/wp-content/themes/walnut/walnut/dev/js/apps/student-training-module/view-module/content-display/templates/content-display-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/student-training-module/view-module/content-display/templates/content-display-item.html
@@ -11,8 +11,7 @@
             <div class="clearfix"></div>
     <div class="tiles grey p-t-10 p-b-10 p-l-20">
         <div class="muted">
-            <span class="bold question-type-div">Question Type:</span> <span class="question-type-div"> {{question_type}},</span>
-            <span class="bold">Date Completed:</span> {{dateCompleted}}
+            <span class="bold question-type-div">Question Type:</span> <span class="question-type-div"> {{question_type}}</span>
         </div>
         <div class="clearfix"></div>
     </div>
@@ -33,8 +32,8 @@
         <div class="tiles grey p-t-10 p-b-10 p-l-20">           
             <div class="muted">
                     <span class="bold">Marks: </span>{{marks}},
-                    <span class="bold">Duration:</span> {{duration}} mins,
-                    <span class="bold">Date Completed:</span> {{dateCompleted}}
+                    <span class="bold">Duration:</span> {{duration}} mins
+                    
             </div> 
             <div class="clearfix"></div>
         </div>
