Adding of new fonts & set default as Quarmic Sans

--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -277,6 +277,7 @@
 	border: 2px solid @preview-grey;
 	padding: 7px;
 	margin: 4px 0 11px;
+  	font-family: "Qarmic Sans Free";
 	.ease;
 	//border-radius: 4px;
 	.element-controls {
