--- a/HTML/assets/less/fonts.less
+++ b/HTML/assets/less/fonts.less
@@ -187,3 +187,21 @@
   src: local('Lane Humouresque'), local('LaneHumouresque-Normal'), url(../fonts/LaneHumouresque.ttf) format('True Type');
   src: local('Lane Humouresque'), local('LaneHumouresque-Normal'), url(../fonts/LaneHumouresque.woff) format('woff');
 }
+
+@font-face {
+  font-family: 'KG Corner of the Sky';
+  font-style: normal;
+  font-weight: 400;
+  src: local('KG Corner of the Sky'), local('KGCorneroftheSky-Normal'), url(../fonts/KGCorneroftheSky.eot) format('embedded-opentype');
+  src: local('KG Corner of the Sky'), local('KGCorneroftheSky-Normal'), url(../fonts/KGCorneroftheSky.ttf) format('True Type');
+  src: local('KG Corner of the Sky'), local('KGCorneroftheSky-Normal'), url(../fonts/KGCorneroftheSky.woff) format('woff');
+}
+
+@font-face {
+  font-family: 'Qarmic Sans Free';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Qarmic Sans Free'), local('QarmicSansFree-Normal'), url(../fonts/QarmicSansFree.eot) format('embedded-opentype');
+  src: local('Qarmic Sans Free'), local('QarmicSansFree-Normal'), url(../fonts/QarmicSansFree.ttf) format('True Type');
+  src: local('Qarmic Sans Free'), local('QarmicSansFree-Normal'), url(../fonts/QarmicSansFree.woff) format('woff');
+}
