--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -223,6 +223,24 @@
   src: local('Lane Humouresque'), local('LaneHumouresque-Normal'), url(../fonts/LaneHumouresque.woff) format('woff');
 }
 
+@font-face {
+  font-family: 'KG Corner of the Sky';
+  font-style: normal;
+  font-weight: 400;
+  src: local('KG Corner of the Sky'), local('KGCorneroftheSky-Normal'), url(../fonts/KGCorneroftheSky.eot) format('embedded-opentype');
+  src: local('KG Corner of the Sky'), local('KGCorneroftheSky-Normal'), url(../fonts/KGCorneroftheSky.ttf) format('True Type');
+  src: local('KG Corner of the Sky'), local('KGCorneroftheSky-Normal'), url(../fonts/KGCorneroftheSky.woff) format('woff');
+}
+
+@font-face {
+  font-family: 'Qarmic Sans Free';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Qarmic Sans Free'), local('QarmicSansFree-Normal'), url(../fonts/QarmicSansFree.eot) format('embedded-opentype');
+  src: local('Qarmic Sans Free'), local('QarmicSansFree-Normal'), url(../fonts/QarmicSansFree.ttf) format('True Type');
+  src: local('Qarmic Sans Free'), local('QarmicSansFree-Normal'), url(../fonts/QarmicSansFree.woff) format('woff');
+}
+
 .creator {
   position: relative;
 }
@@ -481,6 +499,7 @@
   /* Opera 10.50–12.00 */
   transition: all 0.3s ease-out;
   /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
+  font-family: "Qarmic Sans Free";
 }
 .element-wrapper .element-controls {
   position: relative;
