Default mode of the MCQ component should be 2 column layout When selecting images, need to see the name of the image filename in the grid view too.

--- a/wp-content/themes/walnut/walnut/dev/js/apps/media/grid/templates/media.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/media/grid/templates/media.html
@@ -8,6 +8,7 @@
         </div>
     </a>
     <div class="edit-image clearfix">
+    <div><span>{{title_show}}</span></div>
     <span class="glyphicon glyphicon-edit edit"></span> Edit
     </div>
 {{/imagePreview}}
